Sun Mar 03 19:00:54 2002 Christopher Rosendahl <crosendahl@northernwatch.com>
	* When trying to change image in a loaded ebits, it didn't mark the
	  bit as unsaved, and therefor the new image was looked for in the
	  bits.db instead of loading it directly from disk. Fixed.

Sat Mar 02 22:34:48 2002 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Update propagate state sync list when a bit gets selected.
	* Unselect everything in properties clist when bit gets unselected.

Sat Mar 02 21:12:54 2002 Christopher Rosendahl <crosendahl@northernwatch.com>
	* When trying to change image and if the old image were allready saved,
	  it wouldnt load the new image, and much less save it.
	* Fixed some memleaks
	* Made the browse state file dialog goto the last dir it browsed.

Sat Mar 02 19:58:40 2002 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a rectangle to the workspace that layers beneath everything
	  else, this fixes the problem with the workspace getting artifacts
	  when no grid image is found.

Sat Mar 02 19:18:28 2002 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Made the lower and raise apply directly so you dont have to
	  press the apply button.
	* Fixed bug causing the images not getting saved.
	* Etcher now handles custom states.

Wed Feb 27 23:16:47 2002 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Created a ChangLog.
	* Made etcher handle the Selected state.